Fix unnecessary double scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -17,10 +17,10 @@
 }
 
 body {
-  margin: 0;
   display: flex;
-  padding: 1rem;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 #app {
